# CodeComments_franka

./: .gitignore  README.md
franka_advanced_controllers/: CMakeLists.txt
franka_control/launch/: franka_control.launch
franka_control/src/: franka_control_node.cpp  franka_control_node_ORIGIN.cpp
franka_example_controllers/: CMakeLists.txt
franka_example_controllers/config/: franka_example_controllers.yaml
franka_example_controllers/include/franka_example_controllers/: Path.h  Trajectory.h  franka_robot.h  gripper.h  joint_velocity_example_controller.h  joint_velocity_example_controller_origin.h  trajectory_planning.h
franka_example_controllers/launch/: joint_velocity_example_controller.launch  move_to_start.launch
franka_example_controllers/scripts/: move_to_start.py
franka_example_controllers/src/: MotionProfile.cpp  Path.cpp  Trajectory.cpp  franka_robot.cpp  joint_velocity_example_controller.cpp  joint_velocity_example_controller_origin.cpp  joint_velocity_example_controller_test.cpp  teleop_gripper_node.cpp  trajectory_planning.cpp
franka_gripper/src/: franka_gripper_node.cpp
panda_tutorial/resources/from_libfranka/: examples_common.cpp  examples_common.h
panda_tutorial/source/02_Eigen/: do_eigen3_math.cpp
panda_tutorial/source/03_Panda_Axes_Motion/: do_axes_motion.cpp
panda_tutorial/source/04_Panda_Cartesian_Trajectory/: CMakeLists.txt  Path.cpp  Trajectory.cpp  Trajectory.h  do_cartesian_trajectory.cpp
panda_tutorial/source/trajectory/: CMakeLists.txt  main.cpp  traj.cpp  traj.h
pivot-control-automatica23/: .gitignore  readme.md
pivot-control-automatica23/src/android_sensor_remote/: CMakeLists.txt  package.xml
pivot-control-automatica23/src/android_sensor_remote/launch/: joy.launch
pivot-control-automatica23/src/android_sensor_remote/scripts/: gamepad_control.py  remote_control.py
pivot-control-automatica23/src/geometric_fixtures/: CMakeLists.txt  package.xml
pivot-control-automatica23/src/geometric_fixtures/config/: geometric_fixtures.yaml
pivot-control-automatica23/src/geometric_fixtures/include/geometric_fixtures/: DQGeomJac.h  FrankaRobot.h  asym_scalar.h
pivot-control-automatica23/src/geometric_fixtures/launch/: asym_scalar.launch
pivot-control-automatica23/src/geometric_fixtures/src/geometric_fixtures/: asym_scalar.cpp  asym_scalar_wrist.cpp
pivot-control-automatica23/src/spillnot_mpc/: CMakeLists.txt  package.xml  readme.md  spillnot_mpc_plugin.xml
pivot-control-automatica23/src/spillnot_mpc/config/: spillnot_mpc.yaml
pivot-control-automatica23/src/spillnot_mpc/include/spillnot_mpc/: demo.h  mpc.cpp  pseudo_inversion.h  rollouts.h  spillnot_mpc_j2.h  spillnot_task.h
pivot-control-automatica23/src/spillnot_mpc/launch/: automatica.launch  demo.launch  joint_mpc.launch
pivot-control-automatica23/src/spillnot_mpc/src/: mpc_sim.cpp  rollouts_sim.cpp
pivot-control-automatica23/src/spillnot_mpc/src/spillnot_mpc/: demo.cpp  rollouts.cpp  spillnot_mpc_j2.cpp  spillnot_task.cpp
